@@ -1,4 +1,6 @@
 -------------------------------------------------
+Gearswap 0.721 - Adjusted for API changes and related documentation.
+-------------------------------------------------
 Gearswap 0.720 - Fixed Pet TP magnitude, exposed OS library, updated documentation, improved file name handling (a bit), and minor changes to the validation algorithm.
 -------------------------------------------------
 Gearswap 0.719 - Removed dependence on sets library. Fixed error that occured when there was no subjob.
